# python_template_project

./: .gitignore  .pre-commit-config.yaml  Brewfile  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: build-docs.yml  checks-testing.yml  code-cov.yml  deploy-package.yml  release.yml  testing.yml
docs/: CONTRIBUTING.md  README.md
