[tool.poetry]
name = "python_template_project"
version = "0.1.0"
description = "This project can be used as a template for a Python project."
authors = ["Christopher Lemke <chris@syhbl.mozmail.com>"]
readme = "docs/README.md"
license = "MIT"
repository = "https://github.com/chrislemke/python_template_project"
documentation = ""
packages = [{include = ""}]

classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Intended Audience :: Science/Research",
]
keywords = [
    "python",
    "machine learning",
    "data science"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^22.10.0"}
isort = "^5.10.1"
mkdocs = "1.4.2"
mkdocstrings = "0.18.1"
mkdocs-material = "8.5.8"
mypy = "^0.990"
pre-commit = "^2.20.0"
pylint = "^2.15.5"
pytest = "^7.2.0"

[tool.pylint.messages_control]
disable = []

[tool.mypy]
strict = true
disallow_subclassing_any = false
ignore_missing_imports = true
disallow_any_generics = false
warn_return_any = false
exclude = ["tests/*", "docs/*"]

[tool.pylint.format]
max-line-length = 88

[tool.isort]
profile = "black"
