[tool.poetry]
name = "python_template_project"
version = "0.1.0"
description = "This project can be used as a template for a Python project."
authors = ["Christopher Lemke <chris@syhbl.mozmail.com>"]
readme = "docs/README.md"
license = "MIT"
repository = "https://github.com/chrislemke/python_template_project"
documentation = "https://chrislemke.github.io/python_template_project"
packages = [{ include = "python_template_project", from = "src" }]

classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Intended Audience :: Science/Research",
]
keywords = [
    "python",
    "machine learning",
    "data science"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^22.12.0"}
bandit = "^1.7.4"
isort = "^5.11.4"
mypy = "^0.991"
pylint = "^2.15.9"
pre-commit = "^2.21.0"
nbstripout = "^0.6.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "1.4.2"
mkdocstrings = {extras = ["python"], version = "0.19.1"}
mkdocs-material = "9.0.2"

[tool.poetry.group.dev]
optional = false

[tool.poetry.group.test]
optional = true

[tool.poetry.group.docs]
optional = true

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.pylint.messages_control]
disable = []

[tool.pylint.format]
max-line-length = 88

[tool.mypy]
strict = true
disallow_subclassing_any = false
ignore_missing_imports = true
disallow_any_generics = false
warn_return_any = false
no_namespace_packages = true
exclude = ["tests", "docs"]

[tool.black]
target-version = ['py311']


[tool.isort]
profile = "black"
skip_glob = ["docs/*"]
src_paths = ["src/python_template_project", "tests"]
extend_skip = [".md", ".yaml", ".yml"]
